--- a/twstock/ajax_t146sb05.html
+++ b/twstock/ajax_t146sb05.html
@@ -82,6 +82,40 @@
 <td>主 旨</td>
 </tr>
 <tr class=''>
+<td>108/09/16</td>
+<td align='left'>
+<button style='background-color:transparent;border:0;cursor:pointer;padding=0pt;heigh:12px;font-size:15px;text-align:left;' onClick="document.fm1.month.value='09';document.fm1.year.value='108';document.fm1.seq_no.value='4';document.fm1.spoke_time.value='190630';document.fm1.spoke_date.value='20190916';document.fm1.step.value='2';document.fm1.action='/mops/web/ajax_t05st01';openWindow(document.fm1 , '');">
+本公司代子公司 TSMC Global Ltd. 公告處分FHLMC和FNMA之
+不動產抵押貸款債券
+</button>
+</td>
+</tr>
+<tr class='thodd'>
+<td>108/09/16</td>
+<td align='left'>
+<button style='background-color:transparent;border:0;cursor:pointer;padding=0pt;heigh:12px;font-size:15px;text-align:left;' onClick="document.fm1.month.value='09';document.fm1.year.value='108';document.fm1.seq_no.value='3';document.fm1.spoke_time.value='190549';document.fm1.spoke_date.value='20190916';document.fm1.step.value='2';document.fm1.action='/mops/web/ajax_t05st01';openWindow(document.fm1 , '');">
+本公司代子公司 TSMC Global Ltd. 公告取得FNMA之不動產抵押
+貸款債券
+</button>
+</td>
+</tr>
+<tr class=''>
+<td>108/09/16</td>
+<td align='left'>
+<button style='background-color:transparent;border:0;cursor:pointer;padding=0pt;heigh:12px;font-size:15px;text-align:left;' onClick="document.fm1.month.value='09';document.fm1.year.value='108';document.fm1.seq_no.value='2';document.fm1.spoke_time.value='141548';document.fm1.spoke_date.value='20190916';document.fm1.step.value='2';document.fm1.action='/mops/web/ajax_t05st01';openWindow(document.fm1 , '');">
+本公司訂購機器設備公告
+</button>
+</td>
+</tr>
+<tr class='thodd'>
+<td>108/09/16</td>
+<td align='left'>
+<button style='background-color:transparent;border:0;cursor:pointer;padding=0pt;heigh:12px;font-size:15px;text-align:left;' onClick="document.fm1.month.value='09';document.fm1.year.value='108';document.fm1.seq_no.value='1';document.fm1.spoke_time.value='141418';document.fm1.spoke_date.value='20190916';document.fm1.step.value='2';document.fm1.action='/mops/web/ajax_t05st01';openWindow(document.fm1 , '');">
+本公司訂購機器設備公告
+</button>
+</td>
+</tr>
+<tr class=''>
 <td>108/09/12</td>
 <td align='left'>
 <button style='background-color:transparent;border:0;cursor:pointer;padding=0pt;heigh:12px;font-size:15px;text-align:left;' onClick="document.fm1.month.value='09';document.fm1.year.value='108';document.fm1.seq_no.value='2';document.fm1.spoke_time.value='144515';document.fm1.spoke_date.value='20190912';document.fm1.step.value='2';document.fm1.action='/mops/web/ajax_t05st01';openWindow(document.fm1 , '');">
@@ -129,43 +163,9 @@
 </button>
 </td>
 </tr>
-<tr class=''>
-<td>108/09/10</td>
-<td align='left'>
-<button style='background-color:transparent;border:0;cursor:pointer;padding=0pt;heigh:12px;font-size:15px;text-align:left;' onClick="document.fm1.month.value='09';document.fm1.year.value='108';document.fm1.seq_no.value='1';document.fm1.spoke_time.value='143122';document.fm1.spoke_date.value='20190910';document.fm1.step.value='2';document.fm1.action='/mops/web/ajax_t05st01';openWindow(document.fm1 , '');">
-台積公司2019年8月營收報告
-</button>
-</td>
-</tr>
-<tr class='thodd'>
-<td>108/09/09</td>
-<td align='left'>
-<button style='background-color:transparent;border:0;cursor:pointer;padding=0pt;heigh:12px;font-size:15px;text-align:left;' onClick="document.fm1.month.value='09';document.fm1.year.value='108';document.fm1.seq_no.value='3';document.fm1.spoke_time.value='172119';document.fm1.spoke_date.value='20190909';document.fm1.step.value='2';document.fm1.action='/mops/web/ajax_t05st01';openWindow(document.fm1 , '');">
-本公司代子公司 TSMC Global Ltd. 公告處分FHLMC和FNMA之
-不動產抵押貸款債券
-</button>
-</td>
-</tr>
-<tr class=''>
-<td>108/09/09</td>
-<td align='left'>
-<button style='background-color:transparent;border:0;cursor:pointer;padding=0pt;heigh:12px;font-size:15px;text-align:left;' onClick="document.fm1.month.value='09';document.fm1.year.value='108';document.fm1.seq_no.value='2';document.fm1.spoke_time.value='172008';document.fm1.spoke_date.value='20190909';document.fm1.step.value='2';document.fm1.action='/mops/web/ajax_t05st01';openWindow(document.fm1 , '');">
-本公司代子公司 TSMC Global Ltd. 公告取得美國政府公債和
-GNMA之不動產抵押貸款債券
-</button>
-</td>
-</tr>
-<tr class='thodd'>
-<td>108/09/09</td>
-<td align='left'>
-<button style='background-color:transparent;border:0;cursor:pointer;padding=0pt;heigh:12px;font-size:15px;text-align:left;' onClick="document.fm1.month.value='09';document.fm1.year.value='108';document.fm1.seq_no.value='1';document.fm1.spoke_time.value='170030';document.fm1.spoke_date.value='20190909';document.fm1.step.value='2';document.fm1.action='/mops/web/ajax_t05st01';openWindow(document.fm1 , '');">
-本公司訂購機器設備公告
-</button>
-</td>
-</tr>
 </table>
 <div class='more'>
-<div class='more_button' onClick="document.fm1.step.value='1';document.fm1.e_date.value='14';document.fm1.b_date.value='14';document.fm1.month.value='09';document.fm1.year.value='108';document.fm1.firstin.value='';document.fm1.action='/mops/web/t05st01';document.fm1.submit();">more</div>
+<div class='more_button' onClick="document.fm1.step.value='1';document.fm1.e_date.value='16';document.fm1.b_date.value='16';document.fm1.month.value='09';document.fm1.year.value='108';document.fm1.firstin.value='';document.fm1.action='/mops/web/t05st01';document.fm1.submit();">more</div>
 </div>
 <div id='title'>
 <div class='title_left'>營收資訊</div>
